# ymp2

./: LICENSE.md  Makefile  meson.build  meson_options.txt
data/: example.ympsh  hello.ympsh  meson.build  urcc.c  ymp.pc.in  ympbuild-header.sh
debian/: control
docs/: Doxyfile  meson.build  plugin.md  ympfile.md
docs/examples/: meson.build  variable.c  ymp.c
examples/: meson.build  ymp.cpp
examples/core/: logger.c  operation.c  variable.c  ymp.c
examples/data/: build.c  package.c  repository.c
examples/utils/: archive.c  array.c  error.c  fetcher.c  file.c  hash.c  jobs.c  string.c  yaml.c
include/: array.h  config.h.in  jobs.h  operations.h  variable.h  ymp.h
include/core/: help.h  interpreter.h  logger.h  operations.h  variable.h  ymp.h
include/data/: build.h  dependency.h  package.h  quarantine.h  repository.h
include/utils/: archive.h  array.h  color.h  environment.h  error.h  fetcher.h  file.h  gui.h  hash.h  jobs.h  process.h  sandbox.h  string.h  tty.h  yaml.h
plugin/: brainfuck.c  extract.c  fetch.c  hello.c  httpd.c  meson.build
po/: meson.build  tr.po  ymp.pot
src/: ctx.c.in  meson.build  operations.c  variable.c  ymp.c
src/core/: cli.c  help.c  interpreter.c  logger.c  operations.c  variable.c  ymp.c
src/data/: build.c  dependency.c  package.c  quarantine.c  repository.c
src/operations/: build.c  print.c  setget.c
src/operations/package-manager/: build.c  info.c  install.c  key.c  list.c  remove.c  repo.c  search.c
src/operations/utility/: dialog.c  exec.c  help.c  print.c  revdep.c  setget.c  shell.c  sysconf.c
src/utils/: archive.c  array.c  color.c  environment.c  error.c  fetcher.c  file.c  gpg.c  gui.c  gui_message.c  gui_progress.c  gui_yesno.c  hash.c  jobs.c  libc.c  process.c  sandbox.c  string.c  tty.c  yaml.c
